# ai-tools

./: .gitignore
ai-interviewer/: backend_interviewer_01  main.py  output.txt  pyproject.toml
medium-scripts/: medium_to_markdown.py  test.md
oop-scripts/: oop-practice-generator.py  prompt.txt  pyproject.toml  result.json  test_oop-practice-generator.py
